# activation

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.alpine.yml  docker-compose.debug.yml  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.slim-bullseye.yml  docker-compose.yml  docker-gitlab.yml  env.example  nginx.conf  pyproject.toml
.github/workflows/: django.yml
notebook/: README.md  Untitled.ipynb  hanhchinh.ipynb  hanhchinhvn.xls  temp.json
src/: Dockerfile  Dockerfile.alpine  Dockerfile.slim-bullseye  account_pb2.py  account_pb2_grpc.py  client_grpc.py  manage.py  requirements.txt  serializers.py  services.py
src/activation/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/app/: tasks.py
src/app/admin/: __init__.py  campaign.py  employee.py  field_option.py  file.py  form.py  form_field.py  plan.py  product.py  project.py  store.py  user.py  user_profile.py
src/app/middleware/: __init__.py  test.py
src/app/migrations/: 0001_initial.py  0002_alter_project_code.py  0002_alter_store_campaign_plan.py  0002_product.py  0002_remove_userprofile_country_remove_userprofile_state_and_more.py  0002_remove_userprofile_project_user_project_and_more.py  0003_alter_product_options.py  0003_alter_project_code.py  0003_alter_userprofile_options.py  0003_file.py  0003_remove_plan_assigned_to_plan_assignee_and_more.py  0004_form_plan_status_alter_plan_assignee_formfield.py  0004_rename_created_by_file_upload_by.py  0005_alter_file_upload_by.py  0012_plan_store.py  (+14 more)
src/fixtures/: province.json
src/form_builder/: apps.py
(+89 files in other folders)
