[tool.poetry]
name = "test-code-django"
version = "0.1.0"
description = ""
authors = ["Phong Tran <tanphongtr@gmail.com>"]
readme = "README.md"
packages = [{include = "test_code_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
